[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plotly_utils"]

[project]
name = "plotly_utils"
version = "0.0.2"
description = "Some simple patterns/defaults for Plotly."
readme = "README.md"
authors = [{ name = "Lukas Twist", email = "itsluketwist@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["plotly-utils"]
dependencies = [
    "plotly ~= 5.18.0",
    "IPython ~= 8.20.0",
    "kaleido ~= 0.2.1",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/itsluketwist/plotly-utils"
